--- a/Teranga.Core/Teranga.Core.csproj
+++ b/Teranga.Core/Teranga.Core.csproj
@@ -14,7 +14,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Data\teranga-data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
     <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
